css/yveskwamehwebsite.webflow.css
/* ... */
@media screen and (max-width: 991px) {
  .w-layout-blockcontainer {
    max-width: 728px;
  }
}

@media screen and (max-width: 767px) {
  .w-layout-blockcontainer {
    max-width: none;
  }
}

h1 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 34px;
  font-weight: 700;
  line-height: 134%;
}

h2 {
  margin-top: 20px;
  margin-bottom: 10px;
  font-size: 28px;
  font-weight: 700;
  line-height: 134%;
}

a {
  text-decoration: underline;
}

.body {
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  background-color: #f5f5f5;
  flex-flow: column;
  font-family: Poppins, sans-serif;
  display: flex;
}

.head-copy-wrapper {
  z-index: 2;
  grid-column-gap: 12px;
  grid-row-gap: 12px;
  flex-flow: column;
  display: flex;
  position: relative;
}

.head-copy-wrapper.center {
  align-items: center;
}

.highlighted {
  color: #077167;
  font-family: PT Serif, serif;
  font-style: italic;
}

.highlighted.underlined {
  font-size: 17px;
  text-decoration: underline;
}

.proof-wrapper {
  grid-column-gap: 12px;
  grid-row-gap: 12px;
  flex-flow: column;
  align-self: auto;
  display: flex;
}

.divider {
  background-color: #e6e6e6;
  height: 1px;
}

.main-container {
  flex-flow: column;
  max-width: 930px;
}

.section {
  padding-top: 80px;
  padding-bottom: 80px;
}

.section.hero {
  margin-top: 64px;
}

.section.footer {
  padding-top: 80px;
  padding-bottom: 0;
}

.main-image-wrapper {
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
}

.heading {
  color: #000;
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 400;
  line-height: 132%;
}

.heading.contact {
  text-align: center;
  max-width: 100%;
}

.heading.center {
  text-align: center;
  max-width: 300px;
}

.paragraph {
  color: var(--paragraph);
  letter-spacing: -.17px;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 26px;
}

.paragraph.heading {
  color: var(--black);
  font-size: 18px;
  font-weight: 500;
}

.paragraph.service {
  font-size: 14px;
  line-height: 22px;
}

.paragraph.black {
  color: var(--black);
}

.paragraph.experience {
  font-size: 14px;
  line-height: 22px;
}

.paragraph.experience.year {
  color: var(--color-3);
}

.paragraph.experience.position {
  color: var(--black);
}

.paragraph.testimonial {
  color: var(--black);
  font-size: 14px;
  line-height: 24px;
}

.paragraph.testimonial.title {
  color: var(--color-3);
}

.paragraph.small {
  text-align: center;
  font-size: 14px;
  line-height: 20px;
}

.icon-wrapper {
  background-color: #fff;
  border: 1px solid #d5d7da;
  border-radius: 99px;
  justify-content: center;
  align-items: center;
  padding: 10px;
  display: inline-block;
}

.main-wrapper {
  grid-column-gap: 40px;
  grid-row-gap: 40px;
  flex-flow: column;
  align-items: stretch;
  display: flex;
}

.main-wrapper.testimonial {
  justify-content: flex-start;
  align-items: center;
}

.main-wrapper.center {
  justify-content: flex-start;
  align-items: stretch;
}

.button-text {
  letter-spacing: -.14px;
  font-family: Poppins, sans-serif;
  font-weight: 500;
  line-height: 22px;
}

.button-container {
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  perspective: 1000px;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.button-container.mobile {
  display: none;
}

.button-container._404 {
  justify-content: center;
  align-items: center;
  margin-top: 22px;
}

.social-proof {
  width: 140px;
  display: block;
}

.image {
  border-radius: 4px;
  max-width: 200px;
}

.link-button-border {
  grid-column-gap: 8px;
  grid-row-gap: 8px;
  border: 1px solid #000;
  border-radius: 999px;
  justify-content: flex-start;
  align-items: center;
  height: 44.6641px;
  padding-left: 16px;
  padding-right: 16px;
  text-decoration: none;
  transition: all .4s;
  display: flex;
}

.link-button-border.primary {
  grid-column-gap: 8px;
  grid-row-gap: 8px;
  border: 1px solid var(--green);
  background-color: var(--green);
  color: var(--white);
  transform-style: preserve-3d;
  border-radius: 999px;
  padding-left: 0;
  box-shadow: inset 0 -2px #0a0d120d, 0 1px 2px #1018280d;
}

.link-button-border.primary:hover {
  transform: translate(6px, 6px)scale3d(1.08, 1.08, 5)rotate(-4deg);
}

.link-button-border.secondary {
  background-color: var(--white);
  color: var(--paragraph);
  transform-style: preserve-3d;
  border-color: #d5d7da;
  box-shadow: inset 0 -2px #0a0d120d, 0 1px 2px #1018280d;
}

.link-button-border.secondary:hover {
  transform: translate(6px, 6px)scale3d(1.08, 1.08, 5)rotate(4deg);
}

.portfolio-wrapper {
  grid-column-gap: 65px;
  grid-row-gap: 65px;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.portfolio-item {
  grid-column-gap: 24px;
  grid-row-gap: 24px;
  flex-flow: column;
  width: 100%;
  display: flex;
}

.video {
  border-radius: 12px;
  width: 100%;
  height: 700px;
}

.services-wrapper {
  grid-column-gap: 40px;
  grid-row-gap: 40px;
  flex-flow: column;
  display: flex;
}

.content-wrapper {
  grid-column-gap: 32px;
  grid-row-gap: 32px;
  flex-flow: column;
  display: flex;
}

.content-wrapper.serivces {
  grid-column-gap: 110px;
  grid-row-gap: 110px;
  flex-flow: row;
}

.copy-wrapper {
  grid-column-gap: 32px;
  grid-row-gap: 32px;
  flex-flow: column;
  flex: 1;
  display: flex;
}

.service-item-container {
  grid-column-gap: 32px;
  grid-row-gap: 32px;
  flex-flow: column;
  display: flex;
}

.service-item {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
}

.service {
  grid-column-gap: 8px;
  grid-row-gap: 8px;
  justify-content: flex-start;
  align-items: center;
  min-width: 150px;
  display: flex;
}

.tag-dot {
  background-color: var(--color-2);
  border-radius: 999px;
  width: 10px;
  height: 10px;
}

.tag-dot.green {
  background-color: var(--green);
}

.tag-dot.yellow {
  background-color: #dbc997;
}
/* ... */

